crates/ars-components/src/navigation/link/snapshots/ars_components__navigation__link__tests__link_root_default.snap
---
source: crates/ars-components/src/navigation/link.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "link",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Href,
            String(
                "/docs",
            ),
        ),
    ],
    styles: [],
}
